# backend/internal/adapter/delivery/http/router.go
@@ -128,6 +128,9 @@ func NewRouter(authUC *usecaseauth.Interactor, chatUC *usecasechat.Interactor, w
 		pr.Get("/chats/{chatID}/messages/{msgID}/viewers", ch.Viewers)
 		pr.Get("/chats/{chatID}/history", ch.History)
 		pr.Get("/chats/{chatID}/search", ch.SearchMessages)
+		pr.Post("/chats/{chatID}/polls", ch.SendPoll)
+		pr.Post("/polls/{pollID}/vote", ch.VotePoll)
+		pr.Post("/polls/{pollID}/close", ch.ClosePoll)
 		pr.Get("/chats/{chatID}/media", ch.MediaHistory)
 		pr.Post("/chats/{chatID}/read", ch.Read)
 		pr.Get("/sync", ch.Sync)
